# pyeCAP

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HF_Block_Pig05_Multifile.ipynb  HF_Block_Pig05_Multifile_v2.ipynb  README.md  code_snapshot.py  create_code_snapshot.ipynb  functioning_plotter.ipynb  kc_HFtest_nb.ipynb  phys_test_nb.ipynb  phys_test_nb_v2.ipynb  pyproject.toml  setup.py
.github/workflows/: black.yml
Testing/: Test_DA.py  Test_EDA.py
dev/dev_tests/: median_testing.py
dev/speed_tests/: speed_test_find_first.py  speed_test_group_consectutive.py
docs/: requirements.txt  setup.py
docs/source/: conf.py  index.rst
docs/source/nbexamples/: tutorial_01.ipynb  tutorial_02.ipynb  tutorial_03.ipynb  tutorial_04.ipynb  tutorial_05.ipynb  (+2 more)
eCAP_plotter/: Code_Blocks.py  Setting.py  functioning_plotter.ipynb  load_exp_info_csv.py  plot_ecap.py
eba_toolkit/: __init__.py  da.py  ecap.py  eda.py  ephys.py  phys.py  stim.py
eba_toolkit/base/: epoch_data.py  ts_data.py
eba_toolkit/io/: adinstruments_io.py  tdt_io.py
eba_toolkit/viz/: interactive.py
examples/: 01_Introduction to eba_toolkit.ipynb  01_Introduction to pyCAP.ipynb  01_Introduction to pyeCAP.ipynb  02_Interacting and Plotting Ephys Data.ipynb  03_Working with Multiple Data Sets.ipynb  04_Referencing Methods for Ephys Data.ipynb  05_Power Spectral Analysis and Filtering of Ephys Data.ipynb  06_Working with Stimulation Data.ipynb  07_AUC Calculation.ipynb
examples/.ipynb_checkpoints/: 01_Introduction to eba_toolkit-checkpoint.ipynb  02_Interacting and Plotting Ephys Data-checkpoint.ipynb  03_Working with Multiple Data Sets-checkpoint.ipynb  04_Referencing Methods for Ephys Data-checkpoint.ipynb  05_Power Spectral Analysis and Filtering of Ephys Data-checkpoint.ipynb  06_Working with Stimulation Data-checkpoint.ipynb  07_AUC Calculation-checkpoint.ipynb
pyCAP/: __init__.py  phys.py  phys_response.py  pyCAP.py
pyCAP/base/: dio_data.py  dio_epoch.py  event_data.py
pyCAP/io/: ripple_io.py  tdt_io.py
pyCAP/utilities/: ancillary_functions.py
pyeCAP/: __init__.py  ecap.py  ecap_og.py  emg.py  emgV2.py  ephys.py  phys.py  phys_response.py  pyeCAP.py  spkLFP.py  stim.py
pyeCAP/base/: dio_data.py  dio_epoch.py  epoch_data.py  event_data.py  parameter_data.py  ts_data.py
pyeCAP/io/: adinstruments_io.py  ripple_io.py  tdt_io.py
pyeCAP/temp_from_kc_branch/: ecap.py  ecap_branch.py  ecap_old.py  epoch_data_branch.py
pyeCAP/utilities/: ancillary_functions.py
pyeCAP/viz/: interactive.py
(+22 files in other folders)
