[tool.poetry]
name = "pyecap"
version = "0.0.3-post.1+351e544"
description = "pyeCAP is a python package for the analysis of evoked compound action potentials (CAPs) in elecytrophysiology data sets."
authors = ["James Trevathan <jtrevathan@wisc.edu>"]
license = "LGPL 2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">=1.18"
dask = "^2022.7.1"
pandas = "^1.3.3"
scipy = "^1.9.0"
seaborn = "^0.11.2"
ipywidgets = "^7.7.1"
mne = "^1.0.3"
numba = "^0.56.0"
cached-property = "^1.5.2"
cachey = "^0.2.1"
zarr = "^2.12.0"
xarray = "^2022.6.0"
matplotlib = "^3.5.2"
tdt = "^0.5.4"
h5py = "^3.8.0"
ipympl = "^0.9.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
cycler = "^0.11.0"
Pillow = "^9.4.0"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^1.1.1"
black = "^22.6.0"
jupyterlab = "^3.4.4"
devpi-client = "^6.0.0"
pytest = "^7.1.2"
tox = "^3.25.1"
jupyter-contrib-nbextensions = "^0.7.0"
pre-commit = "^3.6.0"
isort = "^5.13.2"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[[tool.poetry.source]]
name = "devpi"
url = "https://devpi.ninjaneering.io/jtrevathan/dev/+simple/"
priority = "supplemental"