[tool.poetry]
name = "pyecap"
version = "0.0.3-post.19+317de1e"
description = "pyeCAP is a python package for the analysis of evoked compound action potentials (CAPs) in elecytrophysiology data sets."
authors = ["James Trevathan <jtrevathan@wisc.edu>"]
license = "LGPL 2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "*"
dask = "*"
pandas = "*"
scipy = "*"
seaborn = "*"
ipywidgets = "*"
mne = "*"
numba = "*"
cached-property = "*"
cachey = "*"
zarr = "*"
xarray = "*"
matplotlib = "*"
tdt = "*"
h5py = "*"
ipympl = "*"
xlrd = "*"
openpyxl = "*"
cycler = "*"
Pillow = "*"
tqdm = "*"
opencv-python = "*"
plotly = "*"

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "*"
black = "*"
jupyterlab = "*"
devpi-client = "*"
pytest = "*"
tox = "*"
jupyter-contrib-nbextensions = "*"
pre-commit = "*"
isort = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"